<resources>
    <string name="app_name">Shopping and Cooking Assistant</string>

    <!-- User profile -->
    <string name="update_details">UPDATE DETAILS</string>
    <string name="title">Title</string>
    <string name="description">Description</string>

    <string-array name="user_details_titles">
        <item>First Name</item>
        <item>Surname</item>
        <item>Email Address</item>
        <item>Password</item>
        <item>Equipment</item>
        <item>Allergies</item>
        <item>Ingredients</item>
    </string-array>

    <string-array name="user_details_entries">
        <item>John</item>
        <item>Doe</item>
        <item>john.doe@email.com</item>
        <item>Pass123!</item>
        <item>Pot, Pan, Rice cooker</item>
        <item>Peanut</item>
        <item>Eggs, Rice, Milk</item>
    </string-array>

    <!-- Search -->
    <string name="recipe_name_placeholder">Recipe name here…</string>
    <string name="recipe_instructions_placeholder">Instructions here…</string>

    <!-- Calendar -->
    <string name="leftArrow"><![CDATA[<-]]></string>
    <string name="rightArrow"><![CDATA[->]]></string>
    <string name="month_here">month</string>
    <string name="mon_cal">MON</string>
    <string name="tue_cal">TUE</string>
    <string name="wed_cal">WED</string>
    <string name="thu_cal">THU</string>
    <string name="fri_cal">FRI</string>
    <string name="sat_cal">SAT</string>
    <string name="sun_cal">SUN</string>
    <string name="day_1">1</string>

    <!-- Virtual Basket -->
    <string name="barcode_scanner_message">Please scan a barcode…</string>
    <string name="home_screen_message">Welcome User!</string>
    <string name="recipe_name">recipe name</string>
    <string name="home_recipe_description">Recipe description here…</string>
    <string name="ingredient_name_placeholder">ingredient name</string>

    <!-- Login Screen -->
    <string name="welcome_message">Welcome!</string>
    <string name="username">Username ("user")</string>
    <string name="password">Password ("pass")</string>
    <string name="login">Login</string>
    <string name="remove_icon">remove icon</string>
    <string name="instruction_number">Instruction No.</string>
    <string name="instruction_here">Instruction here...</string>
    <string name="next_step_button">NEXT STEP</string>
    <string name="filters">Filters</string>
    <string name="filters_no_filters_selected">Filters: No Filters Selected</string>

</resources>